import React from 'react';
import { render, fireEvent, getAllByAltText } from '@testing-library/react';
import {Card, Player} from '../../components';

const category = 'series';
const slideRows = [
    {
        title: 'Documentaries',
        data: [
            {
                title:"Tiger King",
                genre: "documentaries",
                maturity: '18',
                slug:"tiger-king",
                description:"Tiger King description",
                id:"33bbe410-50fb-4c63-a0fd-a0d821e782bf",
                docId: '6Oi7r7uKoq0fQZn6MIZA',
            }
        ],
    },
    {
        title: 'Feel Good',
        data: [
            {
                title:"Juno",
                genre: "feel-good",
                maturity: '0',
                slug:"juno",
                description:"Juno description",
                id:"8c3a1500-3891-4ecd-9d35-bdfa16d6280a",
                docId: '9MbWNgXXb2dyazRdTSi7',
            },
        ],

    },
];

describe('<Card />', () => {
    it('renders the <Card /> with populated data', () => {
        const { container, getByText } = render(
            <Card.Group>
            {slideRows.map((slideItem) => (
              <Card key={`${category}-${slideItem.title.toLowerCase()}`}>
                <Card.Title>{slideItem.title}</Card.Title>
                <Card.Entities>
                  {slideItem.data.map((item) => (
                    <Card.Item key={item.docId} item={item}>
                      <Card.Image src={`/images/${category}/${item.genre}/${item.slug}/small.jpg`} />
                      <Card.Meta>
                        <Card.SubTitle>{item.title}</Card.SubTitle>
                        <Card.Text>{item.description}</Card.Text>
                      </Card.Meta>
                    </Card.Item>
                  ))}
                </Card.Entities>
                <Card.Feature category={category}>
                  <Player>
                    <Player.Button />
                    <Player.Video src="/videos/bunny.mp4" />
                  </Player>
                </Card.Feature>
              </Card>
            ))}
          </Card.Group>
        );
        expect(getByText('Documentaries')).toBeTruthy();
        expect(getByText('Tiger King')).toBeTruthy();
        expect(getByText('Tiger King description')).toBeTruthy();


        expect(getByText('Feel Good')).toBeTruthy();
        expect(getByText('Juno')).toBeTruthy();
        expect(getByText('Juno description')).toBeTruthy();
        expect(container.firstChild).toMatchSnapshot();
    });

    it('renders the <Card /> and toggles the card feature', () => {
        const { container, queryByText, getByTestId, getByAltText } = render(
            <Card.Group>
            {slideRows.map((slideItem) => (
            <Card key={`${category}-${slideItem.title.toLowerCase()}`}>
                <Card.Title>{slideItem.title}</Card.Title>
                <Card.Entities>
                    {slideItem.data.map((item) => (
                        <Card.Item key={item.docId} item={item} data-testid={`${item.slug}-item-feature`}>
                        <Card.Image src={`/images/${category}/${item.genre}/${item.slug}/small.jpg`} />
                        <Card.Meta>
                            <Card.SubTitle>{item.title}</Card.SubTitle>
                            <Card.Text>{item.description}</Card.Text>
                        </Card.Meta>
                        </Card.Item>
                    ))}
                </Card.Entities>
                <Card.Feature category={category}>
                <Player>
                    <Player.Button />
                    <Player.Video src="/videos/bunny.mp4" />
                </Player>
                </Card.Feature>
            </Card>
            ))}
        </Card.Group>
    );

    expect(queryByText('18')).toBeFalsy();
    fireEvent.click(getByTestId('tiger-king-item-feature'));
    expect(queryByText('18')).toBeTruthy();

    fireEvent.click(getByAltText('Close'));
    expect(queryByText('18')).toBeFalsy();

    expect(queryByText('PG')).toBeFalsy();
    fireEvent.click(getByTestId('juno-item-feature'));
    expect(queryByText('PG')).toBeTruthy();

    fireEvent.click(getByAltText('Close'));
    expect(queryByText('PG')).toBeFalsy();
    expect(container.firstChild).toMatchSnapshot();

    });
});
